--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -1,5 +1,5 @@
 {% macro render_blog_post(post, from_index=false) %}
-    <div class="section section-blog-post col-10 offset-1 col-xl-6 offset-xl-3 row">
+    <div class="section section-blog-post col-10 offset-1 col-xl-6 offset-xl-3 row {{ post.class }}">
         <div class="col-12 col-lg-9 offset-lg-1 no-gutters">
             {% if from_index %}
                 <h1><a href="{{ post|url }}">{{ post.title }}</a></h1>
