--- a/assets/static/css/graphene/style.css
+++ b/assets/static/css/graphene/style.css
@@ -115,7 +115,11 @@ body {
     max-height: 400px;
 }
 
-.img-invert img {
+.img-invert {
+    filter: invert(100%);
+}
+
+.svg-invert img[src$='.svg'] {
     filter: invert(100%);
 }
 
