--- a/assets/static/css/graphene/style.css
+++ b/assets/static/css/graphene/style.css
@@ -748,6 +748,12 @@ body {
     font-weight: 900;
 }
 
+.section-blog-post .caption {
+    text-align: center;
+    margin: 0 3em 1.5em 3em;
+    font-size: 90%;
+}
+
 @media only screen and (max-width: 991.9px) {
 
     .navbar-dark .navbar-collapse {
