fixup! Add blog post: Building an SGX profiler for Gramine
Signed-off-by: Paweł Marczewski <pawel@invisiblethingslab.com>

--- a/assets/static/css/graphene/style.css
+++ b/assets/static/css/graphene/style.css
@@ -754,6 +754,10 @@ body {
     font-size: 90%;
 }
 
+.section-blog-post img {
+    max-width: 100%;
+}
+
 @media only screen and (max-width: 991.9px) {
 
     .navbar-dark .navbar-collapse {
