Add "Intel Solution Brief" to resources
Per request from Mona Vij from Intel, who co-authored this document.

Signed-off-by: Wojtek Porczyk <woju@invisiblethingslab.com>

--- a/templates/resources.html
+++ b/templates/resources.html
@@ -150,6 +150,12 @@
                     <div class="link">Video: The Graphene SecDev'20 tutorial</div>
                 </a>
             </div>
+            <div class="document col-12 col-md-4 graphene-spacer-50 p-md-4">
+                <a href="https://cdrdv2.intel.com/v1/dl/getContent/738673" target="_blank">
+                    <div class="title">Gramine: Protecting Unmodified Linux Applications with Confidential Computing</div>
+                    <div class="link">Intel Solution Brief</div>
+                </a>
+            </div>
         </div>
     </div>
 {% endblock %}
