Change Intel logo to 2023 version
Logo taken from
https://commons.wikimedia.org/wiki/File:Intel_logo_2023.svg and adjusted
to fit other logos.

Signed-off-by: Wojtek Porczyk <woju@invisiblethingslab.com>

--- a/templates/home.html
+++ b/templates/home.html
@@ -100,7 +100,7 @@
         <div class="partners col-12 col-md-3 offset-md-1 col-lg-2 row no-gutters">
             <div class="partner graphene-spacer-50 col-4 col-md-12 mt-5 mt-md-0">
                 <a href="https://www.intel.com/" target="">
-                    <img src="{{ '/static/img/1280px-Intel-logo.svg-1.png'|url }}" alt="Intel" />
+                    <img src="{{ '/static/img/Intel_logo_2023-gray.svg'|url }}" alt="Intel" />
                 </a>
             </div>
             <div class="partner graphene-spacer-50 col-4 col-md-12 mt-5 mt-md-0">
