Add NSF grant CNS-2244937
Signed-off-by: Wojtek Porczyk <woju@invisiblethingslab.com>

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -64,6 +64,30 @@
         <div><a href="https://fosshost.org/" target="_blank"><img src="{{ '/static/img/fosshost.org_Cloud_Dark.png'|url }}" alt="Fosshost" width="200" style="max-height:initial"></a></div>
         <div class="col-12">Supported by Fosshost</div>
 
+    <div class="col-12">&nbsp;</div>
+
+    <div>
+        We thank the US National Science Foundation for supporting Gramine
+        development with grant:
+        <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2244937">CNS-2244937:
+            Collaborative Research: SaTC: TTP: Medium: Toward Complete,
+            User-Friendly, and Trustworthy Confidential Computing with Gramine</a>
+    </div>
+
+    <div class="col-12">&nbsp;</div>
+    <div class="col-12">
+        Legal disclaimers, required by our sponsors:
+    </div>
+
+    <div class="col-12">
+        Any opinions, findings, and conclusions or recommendations expressed in
+        this material are ours alone, and do not necessarily reflect the views
+        of our sponsors. All product names, logos, and brands are property of
+        their respective owners. All company, product and service names used in
+        this website are for identification purposes only. Use of these names,
+        logos, and brands does not imply endorsement.
+    </div>
+
     </div>
 </div>
 </div>
